Fix modal new url spilling over, css

--- a/react-app/src/components/ClientTests/ClientTests.css
+++ b/react-app/src/components/ClientTests/ClientTests.css
@@ -24,13 +24,13 @@
   text-decoration: underline;
   color: var(--primary-color-light);
   cursor: pointer;
+  word-break: break-all;
 }
 
 .new-url-modal__sml {
   color: var(--tertiary-color);
   font-size: 0.85rem;
-  margin-left: 3rem;
-  margin-right: 3rem;
+  max-width: 30rem;
 }
 
 /* completed tests */
